<resources>
    <string name="app_name">智慧工地(测试)</string>
    <string name="login_hint_a">歡迎來到智慧工地</string>
    <string name="login_hint_b">勞務人員管理請登錄賬號密碼</string>
    <string name="account">賬號</string>
    <string name="login_hint_d">請輸入賬號</string>
    <string name="password">密碼</string>
    <string name="login_hint_f">請輸入密碼</string>
    <string name="login_hint_g">記住密碼</string>
    <string name="log_in">登錄</string>
    <string name="login_hint_i">車閘管理員</string>
    <string name="login_hint_j">點擊直接登錄</string>

    <string name="log_out">註銷</string>
    <string name="main_hint_b">慕拉士大馬路 公共房屋建造</string>
    <string name="main_hint_c">人員統計</string>

    <string name="main_hint_e">工地人數</string>
    <string name="main_hint_f">在場人數</string>
    <string name="main_hint_g">新增員工信息</string>
    <string name="main_hint_h">信息上傳記錄</string>
    <string name="main_hint_i">各個分判商到場情況</string>
    <string name="main_hint_k">車輛統計</string>
    <string name="main_hint_j">本月車輛進入總數</string>
    <string name="main_hint_r">當日車輛進入總數</string>
    <string name="main_hint_l">人臉識別</string>
    <string name="main_hint_m">車輛信息錄入</string>
    <string name="main_hint_n">進出記錄</string>
    <string name="main_hint_o">現場車輛進出情況</string>
    <string name="personnel_hint_a">請輸入分判商/車牌信息查找</string>
    <string name="personnel_hint_b">請輸入分判商/人員信息查找</string>
    <string name="search">搜索</string>
    <string name="please_enter">請輸入</string>
    <string name="submit_Info">提交信息</string>
    <string name="edit">編輯</string>
    <string name="got_it">知道了</string>

    <plurals name="error_over_count">
        <item quantity="one">You can only select one media file</item>
        <item quantity="many">You can only select up to %1$d media files</item>
    </plurals>

</resources>
