<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.MainPersonnelActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@mipmap/ic_main_personnel_bg">

        <Button
            android:id="@+id/btn_login_out"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/selector_click"
            android:drawableTop="@mipmap/ic_login_out"
            android:drawablePadding="4dp"
            android:padding="10dp"
            android:text="@string/log_out"
            android:textColor="#ffffff"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/tv_main_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:text="@string/main_hint_b"
            android:textColor="#ffffff"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_main_title"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="17dp"
            android:gravity="left"
            android:text="@string/main_hint_c"
            android:textColor="#ffffff"
            android:textSize="15sp"
            android:textStyle="bold" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="140dp"
            android:layout_toLeftOf="@id/v_line"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_personnel_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1548"
                android:textColor="#ffffff"
                android:textSize="33sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_hint_e"
                android:textColor="#ffffff"
                android:textSize="12sp" />


        </LinearLayout>

        <View
            android:id="@+id/v_line"
            android:layout_width="2dp"
            android:layout_height="40dp"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="48dp"
            android:layout_marginTop="150dp"
            android:layout_marginRight="48dp"
            android:background="@color/white" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="140dp"
            android:layout_toRightOf="@id/v_line"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_personnel_online"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1548"
                android:textColor="#ffffff"
                android:textSize="33sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_hint_f"
                android:textColor="#ffffff"
                android:textSize="12sp" />

        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/tv_info_upload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_click"
            android:drawableTop="@mipmap/ic_menu_a"
            android:drawablePadding="10dp"
            android:padding="4dp"
            android:text="@string/main_hint_g"
            android:textColor="#4a4a4a"
            android:textSize="13sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_info_record"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:background="@drawable/selector_click"
            android:drawableTop="@mipmap/ic_menu_b"
            android:drawablePadding="10dp"
            android:padding="4dp"
            android:text="@string/main_hint_h"
            android:textColor="#4a4a4a"
            android:textSize="13sp"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/main_hint_i"
        android:textColor="#4a4a4a"
        android:textSize="16sp"
        android:textStyle="bold" />

</LinearLayout>